<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MusicPlayer</string>

    <!-- Login -->
    <string name="login_activity_title">Connexion</string>
    <string name="login_btn">Se connecter</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_username">Nom d\'utilisateur</string>
    <string name="login_wrong_password_msg">Le mot de passe saisi est incorrect</string>

    <!-- Menu principal (main) -->
    <string name="main_activity_title">Menu principal</string>
    <string name="main_show_btn">Liste des morceaux de musique</string>
    <string name="main_search_btn">Rechercher</string>
    <string name="main_logout_btn">Se déconnecter</string>
    <string name="main_add_btn">Lecteur de Musique</string>
    <string name="main_welcome">Bienvenue </string>
    <string name="main_back_button_disable">Pour retournez en arrière, déconnectez-vous.</string>

    <!-- Affichage (show) -->
    <string name="show_list_activity_title">Liste des morceaux de musique</string>
    <string name="show_list_no_result">Aucun résultat ne correspond à votre recherche</string>
    <string name="show_list_error_no_item">Aucun élément dans votre collection. Commencez par en ajouter.</string>
    <string name="show_list_name_title">Nom de l\'élément de collection</string>
    <string name="show_list_rating_title">Note</string>
    <!-- Recherche (search) -->
    <string name="search_activity_title">Rechercher</string>
    <string name="search_hint">Taper pour rechercher un élément dans votre collection</string>

    <!-- Détails (details) -->
    <string name="show_details_activity_title">Détails du morceau</string>
    <string name="show_details_name_title">Nom de l\'élément :</string>
    <string name="show_details_description_title">Description :</string>
    <string name="show_details_picture_title">Image :</string>
    <string name="show_details_rating_title">Note : </string>
    <string name="show_details_rating_change_error">Désolé, la nouvelle note n\'a pas pu être enregistrée.</string>
    <string name="show_details_title_title">Titre :</string>
    <string name="show_details_filename_title">Nom du fichier :</string>
    <string name="show_artist_title">Artiste :</string>

    <!-- Music Player -->
    <string name="player_activity_title">Music Player</string>

    <string name="preview_description">Preview de l\'image</string>

</resources>
