<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.uclouvain.lsinf1225.musicplayer.activity.MainActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/default_padding"
        android:text="@string/main_welcome"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_show_list_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_show_list"
        android:drawableStart="@drawable/ic_main_show_list"
        android:onClick="show"
        android:text="@string/main_show_btn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <Button
        android:id="@+id/main_search_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_search"
        android:drawableStart="@drawable/ic_main_search"
        android:onClick="search"
        android:text="@string/main_search_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_show_list_btn" />

    <Button
        android:id="@+id/main_add_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_add"
        android:drawableStart="@drawable/ic_main_add"
        android:onClick="player"
        android:text="@string/main_add_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_search_btn" />

    <Button
        android:id="@+id/main_logout_btn"
        style="@style/main_btn"
        android:drawableLeft="@drawable/ic_main_lock"
        android:drawableStart="@drawable/ic_main_lock"
        android:onClick="logout"
        android:text="@string/main_logout_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_add_btn" />

</android.support.constraint.ConstraintLayout>
