<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout5"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alignmentMode="alignBounds"
    tools:context="be.uclouvain.lsinf1225.musicplayer.activity.ShowDetailsActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/show_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_details_title_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_details_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <TextView
        android:id="@+id/textView2"
        style="@style/show_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_artist_title"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/show_details_title" />

    <TextView
        android:id="@+id/show_details_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/show_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_details_filename_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_details_artist" />

    <TextView
        android:id="@+id/show_details_filename"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView4"
        style="@style/show_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/show_details_rating_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_details_filename" />

    <RatingBar
        android:id="@+id/show_details_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/show_details_filename"
        tools:layout_editor_absoluteY="81dp" />

    <ImageButton
        android:id="@+id/show_details_play_btn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preview_description"
        android:onClick="play"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
